syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.elsmancs.grpc";
option java_outer_classname = "PaymentProto";
option objc_class_prefix = "PAY";

package payment;
 
// Interfaz exportada por el servidor
 
service Payment {
    // Un RPC simple.
    // Procesa un cargo a la tarjeta de credito dada.
    // Devuelve boolean indicando si se ha procesado el pago.
 
    rpc Pay (CreditCard) returns (Processed) {}
   
}
   
// Tarjeta de cr√©dito
message CreditCard {
    // propietario de la tarjeta
    string owner = 1;
    // numero de la tarjeta
    string number = 2;
    double charge = 3;
}
   
// Pago autorizado
message Processed {  
    // Si hay credito disponible se procesa
    bool isProcessed = 1;
}
 