/**
 * instalar extension vscode-proto3
 */

syntax = "proto3";

import "payment.proto";

option java_multiple_files = true;
option java_package = "org.elsmancs.grpc"; // dara problemas
option java_outer_classname = "UfosParkProto";
option objc_class_prefix = "UFP";

/* 
  You can add an optional package specifier to a .proto file 
  to prevent name clashes between protocol message types.
  Sirve para importar estos mensajes a otros ficheros proto.
  */
package ufos.park;

// Interfaz exportada por el servidor

service UfosPark {
    // Un RPC simple.
    //
    // Asigna un UFO a una tarjeta de credito dada.
    //
    // Devuelve un UFO con un nombre vacio si alguna 
    // de las condiciones de reserva fallan.

    rpc Dispatch (payment.CreditCard) returns (Ufo) {}
    rpc AssignUfo (Ufo) returns (payment.Processed) {}  
}
  
// Tarjeta de crédito importada de ufos_park.proto

// Ufo reservado para esa tarjeta de crédito
message Ufo {  
    // id del UFO
    string id = 1;
    // Pendiente:
    // CreditCard lo = 2;
    string cardNumber = 2;
}

/*
message Confirmed {  
  // Asigna el UFO indicado a la Card indicada
  bool isUfoAssigned = 1;
}*/